@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-<title>irrBP: IrrBP 0.0.1 Documentation</title>
+<title>irrBP: IrrBP 0.1.1 Documentation</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link href="search/search.css" rel="stylesheet" type="text/css"/>
 <script type="text/javaScript" src="search/search.js"></script>
@@ -40,10 +40,10 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </div>
 <div class="header">
   <div class="headertitle">
-<h1>IrrBP 0.0.1 Documentation </h1>  </div>
+<h1>IrrBP 0.1.1 Documentation </h1>  </div>
 </div>
 <div class="contents">
-<h3 class="version">0.0.1 </h3><h2><a class="anchor" id="intro"></a>
+<h3 class="version">0.1.1 </h3><h2><a class="anchor" id="intro"></a>
 Introduction</h2>
 <p>Welcome to IrrBP - an Irrlicht-Bullet Physics wrapper.</p>
 <p>I wrote those few class to help you intagrate physics into your game, without knowing Bullet Physics Engine. The integration is very simple, and the function are very (irrlicht)user-friendly. You don't need to worry about optimization and memory leaks...IrrBP is alreading doing this!</p>
@@ -216,6 +216,7 @@ LinearMath.lib </li>
 <li>
 Add IrrBP Source and Include directory into your project </li>
 </ol>
+<p><b>Important NOTE:</b> If you use a bullet version, different from the irrBP official bullet supported version (2.76 right now), you must pay attention when compiling BULLET PHYSICS: To avoid linking problems in your project you need to verify (and even change) that the runtime library in BULLET_PHYSICS project is setted to "MultiThreaded". </p>
 </div>
 <!--- window showing the filter options -->
 <div id="MSearchSelectWindow"
@@ -231,7 +232,7 @@ Add IrrBP Source and Include directory into your project </li>
 </iframe>
 </div>
 
-<hr class="footer"/><address class="footer"><small>Generated on Tue Sep 7 2010 15:24:39 for irrBP by&nbsp;
+<hr class="footer"/><address class="footer"><small>Generated on Sun Sep 19 2010 14:20:20 for irrBP by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/></a> 1.7.1 </small></address>
 </body>
